LPS-166350 New Corrected the width to 25% and added the truncate an tooltip in text and select area.

--- a/modules/apps/data-engine/data-engine-js-components-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/data-engine/data-engine-js-components-web/src/main/resources/META-INF/resources/css/main.scss
@@ -75,6 +75,10 @@ body .ddm-user-view-content {
 	}
 }
 
+.form-control {
+	@extend %text-ellipsis;
+}
+
 .portlet-forms .ddm-form-basic-info .ddm-form-name {
 	color: #000;
 	font-weight: 500;
@@ -195,6 +199,10 @@ body .ddm-user-view-content {
 
 	.row {
 		min-height: auto;
+
+		.col-ddm {
+			min-width: 25%;
+		}
 	}
 
 	.has-error {
